src/grammar/miniaParser.cpp

// Generated from minia.g4 by ANTLR 4.13.2


#include "miniaListener.h"

#include "miniaParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MiniaParserStaticData final {
  MiniaParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MiniaParserStaticData(const MiniaParserStaticData&) = delete;
  MiniaParserStaticData(MiniaParserStaticData&&) = delete;
  MiniaParserStaticData& operator=(const MiniaParserStaticData&) = delete;
  MiniaParserStaticData& operator=(MiniaParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag miniaParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MiniaParserStaticData> miniaParserStaticData = nullptr;

void miniaParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (miniaParserStaticData != nullptr) {
    return;
  }
#else
  assert(miniaParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MiniaParserStaticData>(
    std::vector<std::string>{
      "prog", "start", "expr", "logicalOrExpr", "logicalAndExpr", "equalityExpr", 
      "relationalExpr", "additiveExpr", "multiplicativeExpr", "unaryExpr", 
      "primaryExpr", "listLiteral", "funcCall", "exprList", "literal"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'&'", "'|'", "'!'", "'true'", "'false'", "'=='", 
      "'!='", "'>'", "'>='", "'<'", "'<='", "'+'", "'-'", "'*'", "'/'", 
      "'%'", "','", "';'", "'='", "'\"'"
    },
    std::vector<std::string>{
      "", "", "", "T_AND", "T_OR", "T_NOT", "T_TRUE", "T_FALSE", "T_EQ", 
      "T_NEQ", "T_GT", "T_GTE", "T_LT", "T_LTE", "T_ADD", "T_SUB", "T_MUL", 
      "T_DIV", "T_MOD", "COMMA", "SEMI", "T_EQUAL", "QUOTA", "STRING_LIST", 
      "INTEGER_LIST", "DECIMAL_LIST", "IDENTIFIER", "INTEGER", "DECIMAL", 
      "STRING", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  miniaParserStaticData = std::move(staticData);
}

}

miniaParser::miniaParser(TokenStream *input) : miniaParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

miniaParser::miniaParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  miniaParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *miniaParserStaticData->atn, miniaParserStaticData->decisionToDFA, miniaParserStaticData->sharedContextCache, options);
}

miniaParser::~miniaParser() {
  delete _interpreter;
}

const atn::ATN& miniaParser::getATN() const {
  return *miniaParserStaticData->atn;
}

std::string miniaParser::getGrammarFileName() const {
  return "minia.g4";
}

const std::vector<std::string>& miniaParser::getRuleNames() const {
  return miniaParserStaticData->ruleNames;
}

const dfa::Vocabulary& miniaParser::getVocabulary() const {
  return miniaParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView miniaParser::getSerializedATN() const {
  return miniaParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

miniaParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<miniaParser::StartContext *> miniaParser::ProgContext::start() {
  return getRuleContexts<miniaParser::StartContext>();
}

miniaParser::StartContext* miniaParser::ProgContext::start(size_t i) {
  return getRuleContext<miniaParser::StartContext>(i);
}

tree::TerminalNode* miniaParser::ProgContext::EOF() {
  return getToken(miniaParser::EOF, 0);
}

std::vector<tree::TerminalNode *> miniaParser::ProgContext::SEMI() {
  return getTokens(miniaParser::SEMI);
}

tree::TerminalNode* miniaParser::ProgContext::SEMI(size_t i) {
  return getToken(miniaParser::SEMI, i);
}


size_t miniaParser::ProgContext::getRuleIndex() const {
  return miniaParser::RuleProg;
}

void miniaParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void miniaParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}

miniaParser::ProgContext* miniaParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, miniaParser::RuleProg);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(30);
        start();
        setState(31);
        match(miniaParser::SEMI); 
      }
      setState(37);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(38);
    start();
    setState(39);
    match(miniaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StartContext ------------------------------------------------------------------

miniaParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* miniaParser::StartContext::IDENTIFIER() {
  return getToken(miniaParser::IDENTIFIER, 0);
}

tree::TerminalNode* miniaParser::StartContext::T_EQUAL() {
  return getToken(miniaParser::T_EQUAL, 0);
}

miniaParser::ExprContext* miniaParser::StartContext::expr() {
  return getRuleContext<miniaParser::ExprContext>(0);
}


size_t miniaParser::StartContext::getRuleIndex() const {
  return miniaParser::RuleStart;
}

void miniaParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void miniaParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

miniaParser::StartContext* miniaParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 2, miniaParser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    match(miniaParser::IDENTIFIER);
    setState(42);
    match(miniaParser::T_EQUAL);
    setState(43);
    expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

miniaParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

miniaParser::LogicalOrExprContext* miniaParser::ExprContext::logicalOrExpr() {
  return getRuleContext<miniaParser::LogicalOrExprContext>(0);
}


size_t miniaParser::ExprContext::getRuleIndex() const {
  return miniaParser::RuleExpr;
}

void miniaParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void miniaParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}

miniaParser::ExprContext* miniaParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 4, miniaParser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    logicalOrExpr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalOrExprContext ------------------------------------------------------------------

miniaParser::LogicalOrExprContext::LogicalOrExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t miniaParser::LogicalOrExprContext::getRuleIndex() const {
  return miniaParser::RuleLogicalOrExpr;
}

void miniaParser::LogicalOrExprContext::copyFrom(LogicalOrExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- OrExprContext ------------------------------------------------------------------

std::vector<miniaParser::LogicalOrExprContext *> miniaParser::OrExprContext::logicalOrExpr() {
  return getRuleContexts<miniaParser::LogicalOrExprContext>();
}

miniaParser::LogicalOrExprContext* miniaParser::OrExprContext::logicalOrExpr(size_t i) {
  return getRuleContext<miniaParser::LogicalOrExprContext>(i);
}

tree::TerminalNode* miniaParser::OrExprContext::T_OR() {
  return getToken(miniaParser::T_OR, 0);
}

miniaParser::OrExprContext::OrExprContext(LogicalOrExprContext *ctx) { copyFrom(ctx); }

void miniaParser::OrExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOrExpr(this);
}
void miniaParser::OrExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOrExpr(this);
}
//----------------- TrivialLogicalAndExprContext ------------------------------------------------------------------

miniaParser::LogicalAndExprContext* miniaParser::TrivialLogicalAndExprContext::logicalAndExpr() {
  return getRuleContext<miniaParser::LogicalAndExprContext>(0);
}

miniaParser::TrivialLogicalAndExprContext::TrivialLogicalAndExprContext(LogicalOrExprContext *ctx) { copyFrom(ctx); }

void miniaParser::TrivialLogicalAndExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTrivialLogicalAndExpr(this);
}
void miniaParser::TrivialLogicalAndExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTrivialLogicalAndExpr(this);
}

miniaParser::LogicalOrExprContext* miniaParser::logicalOrExpr() {
   return logicalOrExpr(0);
}

miniaParser::LogicalOrExprContext* miniaParser::logicalOrExpr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  miniaParser::LogicalOrExprContext *_localctx = _tracker.createInstance<LogicalOrExprContext>(_ctx, parentState);
  miniaParser::LogicalOrExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, miniaParser::RuleLogicalOrExpr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<TrivialLogicalAndExprContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(48);
    logicalAndExpr(0);
    _ctx->stop = _input->LT(-1);
    setState(55);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<OrExprContext>(_tracker.createInstance<LogicalOrExprContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleLogicalOrExpr);
        setState(50);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(51);
        match(miniaParser::T_OR);
        setState(52);
        logicalOrExpr(3); 
      }
      setState(57);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- LogicalAndExprContext ------------------------------------------------------------------

miniaParser::LogicalAndExprContext::LogicalAndExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t miniaParser::LogicalAndExprContext::getRuleIndex() const {
  return miniaParser::RuleLogicalAndExpr;
}

void miniaParser::LogicalAndExprContext::copyFrom(LogicalAndExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AndExprContext ------------------------------------------------------------------

std::vector<miniaParser::LogicalAndExprContext *> miniaParser::AndExprContext::logicalAndExpr() {
  return getRuleContexts<miniaParser::LogicalAndExprContext>();
}

miniaParser::LogicalAndExprContext* miniaParser::AndExprContext::logicalAndExpr(size_t i) {
  return getRuleContext<miniaParser::LogicalAndExprContext>(i);
}

tree::TerminalNode* miniaParser::AndExprContext::T_AND() {
  return getToken(miniaParser::T_AND, 0);
}

miniaParser::AndExprContext::AndExprContext(LogicalAndExprContext *ctx) { copyFrom(ctx); }

void miniaParser::AndExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAndExpr(this);
}
void miniaParser::AndExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAndExpr(this);
}
//----------------- TrivialEqualityExprContext ------------------------------------------------------------------

miniaParser::EqualityExprContext* miniaParser::TrivialEqualityExprContext::equalityExpr() {
  return getRuleContext<miniaParser::EqualityExprContext>(0);
}

miniaParser::TrivialEqualityExprContext::TrivialEqualityExprContext(LogicalAndExprContext *ctx) { copyFrom(ctx); }

void miniaParser::TrivialEqualityExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTrivialEqualityExpr(this);
}
void miniaParser::TrivialEqualityExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTrivialEqualityExpr(this);
}

miniaParser::LogicalAndExprContext* miniaParser::logicalAndExpr() {
   return logicalAndExpr(0);
}

miniaParser::LogicalAndExprContext* miniaParser::logicalAndExpr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  miniaParser::LogicalAndExprContext *_localctx = _tracker.createInstance<LogicalAndExprContext>(_ctx, parentState);
  miniaParser::LogicalAndExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, miniaParser::RuleLogicalAndExpr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<TrivialEqualityExprContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(59);
    equalityExpr();
    _ctx->stop = _input->LT(-1);
    setState(66);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<AndExprContext>(_tracker.createInstance<LogicalAndExprContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleLogicalAndExpr);
        setState(61);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(62);
        match(miniaParser::T_AND);
        setState(63);
        logicalAndExpr(3); 
      }
      setState(68);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- EqualityExprContext ------------------------------------------------------------------

miniaParser::EqualityExprContext::EqualityExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t miniaParser::EqualityExprContext::getRuleIndex() const {
  return miniaParser::RuleEqualityExpr;
}

void miniaParser::EqualityExprContext::copyFrom(EqualityExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- EqualExprContext ------------------------------------------------------------------

std::vector<miniaParser::RelationalExprContext *> miniaParser::EqualExprContext::relationalExpr() {
  return getRuleContexts<miniaParser::RelationalExprContext>();
}

miniaParser::RelationalExprContext* miniaParser::EqualExprContext::relationalExpr(size_t i) {
  return getRuleContext<miniaParser::RelationalExprContext>(i);
}

tree::TerminalNode* miniaParser::EqualExprContext::T_EQ() {
  return getToken(miniaParser::T_EQ, 0);
}

miniaParser::EqualExprContext::EqualExprContext(EqualityExprContext *ctx) { copyFrom(ctx); }

void miniaParser::EqualExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEqualExpr(this);
}
void miniaParser::EqualExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEqualExpr(this);
}
//----------------- NotEqualExprContext ------------------------------------------------------------------

std::vector<miniaParser::RelationalExprContext *> miniaParser::NotEqualExprContext::relationalExpr() {
  return getRuleContexts<miniaParser::RelationalExprContext>();
}

miniaParser::RelationalExprContext* miniaParser::NotEqualExprContext::relationalExpr(size_t i) {
  return getRuleContext<miniaParser::RelationalExprContext>(i);
}

tree::TerminalNode* miniaParser::NotEqualExprContext::T_NEQ() {
  return getToken(miniaParser::T_NEQ, 0);
}

miniaParser::NotEqualExprContext::NotEqualExprContext(EqualityExprContext *ctx) { copyFrom(ctx); }

void miniaParser::NotEqualExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNotEqualExpr(this);
}
void miniaParser::NotEqualExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNotEqualExpr(this);
}
//----------------- TrivialRelationalExprContext ------------------------------------------------------------------

miniaParser::RelationalExprContext* miniaParser::TrivialRelationalExprContext::relationalExpr() {
  return getRuleContext<miniaParser::RelationalExprContext>(0);
}

miniaParser::TrivialRelationalExprContext::TrivialRelationalExprContext(EqualityExprContext *ctx) { copyFrom(ctx); }

void miniaParser::TrivialRelationalExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTrivialRelationalExpr(this);
}
void miniaParser::TrivialRelationalExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTrivialRelationalExpr(this);
}
miniaParser::EqualityExprContext* miniaParser::equalityExpr() {
  EqualityExprContext *_localctx = _tracker.createInstance<EqualityExprContext>(_ctx, getState());
  enterRule(_localctx, 10, miniaParser::RuleEqualityExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(78);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<miniaParser::EqualExprContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(69);
      relationalExpr();
      setState(70);
      match(miniaParser::T_EQ);
      setState(71);
      relationalExpr();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<miniaParser::NotEqualExprContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(73);
      relationalExpr();
      setState(74);
      match(miniaParser::T_NEQ);
      setState(75);
      relationalExpr();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<miniaParser::TrivialRelationalExprContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(77);
      relationalExpr();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RelationalExprContext ------------------------------------------------------------------

miniaParser::RelationalExprContext::RelationalExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t miniaParser::RelationalExprContext::getRuleIndex() const {
  return miniaParser::RuleRelationalExpr;
}

void miniaParser::RelationalExprContext::copyFrom(RelationalExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- TrivialAdditiveExprContext ------------------------------------------------------------------

miniaParser::AdditiveExprContext* miniaParser::TrivialAdditiveExprContext::additiveExpr() {
  return getRuleContext<miniaParser::AdditiveExprContext>(0);
}

miniaParser::TrivialAdditiveExprContext::TrivialAdditiveExprContext(RelationalExprContext *ctx) { copyFrom(ctx); }

void miniaParser::TrivialAdditiveExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTrivialAdditiveExpr(this);
}
void miniaParser::TrivialAdditiveExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTrivialAdditiveExpr(this);
}
//----------------- GreaterThanExprContext ------------------------------------------------------------------

std::vector<miniaParser::AdditiveExprContext *> miniaParser::GreaterThanExprContext::additiveExpr() {
  return getRuleContexts<miniaParser::AdditiveExprContext>();
}

miniaParser::AdditiveExprContext* miniaParser::GreaterThanExprContext::additiveExpr(size_t i) {
  return getRuleContext<miniaParser::AdditiveExprContext>(i);
}

tree::TerminalNode* miniaParser::GreaterThanExprContext::T_GT() {
  return getToken(miniaParser::T_GT, 0);
}

miniaParser::GreaterThanExprContext::GreaterThanExprContext(RelationalExprContext *ctx) { copyFrom(ctx); }

void miniaParser::GreaterThanExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGreaterThanExpr(this);
}
void miniaParser::GreaterThanExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGreaterThanExpr(this);
}
//----------------- LessThanEqualExprContext ------------------------------------------------------------------

std::vector<miniaParser::AdditiveExprContext *> miniaParser::LessThanEqualExprContext::additiveExpr() {
  return getRuleContexts<miniaParser::AdditiveExprContext>();
}

miniaParser::AdditiveExprContext* miniaParser::LessThanEqualExprContext::additiveExpr(size_t i) {
  return getRuleContext<miniaParser::AdditiveExprContext>(i);
}

tree::TerminalNode* miniaParser::LessThanEqualExprContext::T_LTE() {
  return getToken(miniaParser::T_LTE, 0);
}

miniaParser::LessThanEqualExprContext::LessThanEqualExprContext(RelationalExprContext *ctx) { copyFrom(ctx); }

void miniaParser::LessThanEqualExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLessThanEqualExpr(this);
}
void miniaParser::LessThanEqualExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<miniaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLessThanEqualExpr(this);
}
//----------------- LessThanExprContext ------------------------------------------------------------------

std::vector<miniaParser::AdditiveExprContext *> miniaParser::LessThanExprContext::additiveExpr() {
  return getRuleContexts<miniaParser::AdditiveExprContext>();
}

miniaParser::AdditiveExprContext* miniaParser::LessThanExprContext::additiveExpr(size_t i) {
  return getRuleContext<miniaParser::AdditiveExprContext>(i);
}

tree::TerminalNode* miniaParser::LessThanExprContext::T_LT() {
  return getToken(miniaParser::T_LT, 0);
}

miniaParser::LessThanExprContext::LessThanExprContext(RelationalExprContext *ctx) { copyFrom(ctx); }
